--- a/PageObjectModel/pom.xml
+++ b/PageObjectModel/pom.xml
@@ -36,8 +36,8 @@
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <artifactId>junit-dep</artifactId>
+      <version>4.8.2</version>
     
     </dependency>
   <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
