--- a/PageObjectModel/src/main/java/salesforce/config.properties
+++ b/PageObjectModel/src/main/java/salesforce/config.properties
@@ -1,3 +1,3 @@
 browser=chrome
 path=C:\\Users\\auhum\\Desktop\\ExtendReport\\
-screenpath=C:\Users\auhum\Documents\salesForce\Screenshot
+screenpath=C:\Users\auhum\Documents\
